# UdemyCppPro

3_CMake/: CommandLines.txt  README.md
3_CMake/3_IntermediateProject/: CMakeLists.txt
3_CMake/3_IntermediateProject/app/: CMakeLists.txt
3_CMake/3_IntermediateProject/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
3_CMake/3_IntermediateProject/build-debug/app/: Makefile  cmake_install.cmake
3_CMake/3_IntermediateProject/build-debug/src/: Makefile  cmake_install.cmake
3_CMake/3_IntermediateProject/build-debug/src/my_lib/: Makefile  cmake_install.cmake
3_CMake/3_IntermediateProject/src/my_lib/: CMakeLists.txt
3_CMake/4_VariablesOptions/: CMakeLists.txt
3_CMake/5_ConfigureFile/configured/: config.hpp.in
3_CMake/5_ConfigureFile/src/my_lib/: CMakeLists.txt
3_CMake/6_BetterProject/app/: CMakeLists.txt
3_CMake/6_BetterProject/src/my_lib/: CMakeLists.txt
3_CMake/8_FetchContent/: CMakeLists.txt
3_CMake/8_FetchContent/cmake/: AddGitSubmodule.cmake
